2010-09-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #15812: Add backend maintenance for login news - added sprites for icon

2010-09-28  Ingo Renner  <ingo@typo3.org>

	* Added feature #15812: Add backend maintenance for login news

2010-09-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15829: ExtDirect wrong XCLASS registration code (Thanks to Stefan Galinski)

2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
	* Follow-up to bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
	* Fixed bug #15339: htmlArea RTE: tkr_rteanchors breaks the link editing dialogue
	* Fixed bug #15730: htmlArea RTE: Problem editing a new list entry in list of items with inline markup
	* Fixed bug #15818: htmlArea RTE: Erratic behaviour of toolbar in some browsers

2010-09-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed unit tests #15802: t3lib_iconWorksTest fails some tests since fix in #15110 (Thanks to Philipp Gampe)

2010-09-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue

2010-09-26  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Fixed bug #9892: Extbase: broke switchableControllerAndActions (due to a merge failure of Extbase trunk into the Core)

2010-09-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Follow-up to bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Fixed bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue
	* Fixed bug #15749: htmlArea RTE: Firefox shows &amp; in external links with query string
	* Fixed bug #15512: htmlArea RTE: Initialization in flexforms broken with TYPO3 4.4