@@ -1,3 +1,7 @@
+2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Added feature #15075: [Install] make a pre-check for required php-extensions (Thanks to Jigal van Hemert)
+
 2010-09-28  Steffen Kamper  <steffen@typo3.org>
 
 	* Follow-up to #15812: Add backend maintenance for login news - added sprites for icon
